just need to fix alignment issues

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body{
     height: 100%;
 }
 
+#main-container {
+    flex:1;
+}
+
 #container {
     display: flex;
     flex-direction: column;  
